[tool.poetry]
name = "cfntool"
version = "0.1.0"
description = ""
authors = ["ccdale <chris.allison@hivehome.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ccalogging = "^0.3.3"
boto3 = "^1.12.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
